2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkInt.decls:	[Bugs 220600, 220690]: Comment that
	  TkWinChildProc is exported through the stubs table
	  since 8.5.9

2009-12-11  Jan Nijtmans  <nijtmans@users.sf.net>

    * win/makefile.vc:   Fix dependancies on ${TKSTUBLIB} when
                         TCL_USE_STATIC_PACKAGES is defined
    * generic/tkWindow.c:   Fix gcc warning, using gcc-4.3.4 on cygwin
                            warning: array subscript has type 'char'

2009-12-11  Donal K. Fellows  <dkf@users.sf.net>

	* library/tk.tcl (::tk::ScreenChanged): [Bug 2912473]: Stop problems
	caused by display names with a double colon in.

2009-12-10  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/ttkscale.tcl: Added demo of [ttk::scale] widget.

2009-12-09  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkColor.c (Tk_GetColorByValue): [Bug 2911570]: Ensure that
	hash keys of color values are zeroed first, so that they hash properly
	on 64-bit systems (where X structures are not tightly packed).

	* unix/tkUnixWm.c (TkpMakeMenuWindow):	Improve the determining of what
	* generic/tkMenu.c (ConfigureMenu):	EWMH hint to use so that we
	distinguish between dropdown menus (children of menubars) and what are
	presumably popup menus.

2009-12-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tkUnixWm.c: [Bug 2864685]: Apply suitable extended window
	manager hints to the menus so that modern unix window managers can use
	the correct animation modes.

2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/configure:	(regenerated)
	* win/Makefile.in:	Use tktest86.dll for all tests.
	* win/tkWinInt.h:	Mark various functions MODULE_SCOPE
	* generic/tkInt.decls:	[Bugs 220600, 220690]: Make TkWinChildProc
				available in private stub table.
	* generic/tkIntPlatDecls.h: (regenerated)
	* generic/tkStubInit.c:	(regenerated)

2009-11-30  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/Makefile.in: Better dependancies in case of static build.